Some refactoring on day 1